fix: footer overflow

--- a/blog-website/src/css/custom.css
+++ b/blog-website/src/css/custom.css
@@ -65,3 +65,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   margin: 0 0.25em;
   max-height: 18px;
 }
+
+.footer__link-item {
+  width: fit-content;
+}
